--- a/www/index.html
+++ b/www/index.html
@@ -3206,9 +3206,9 @@
             for(var i = 0; i < algorithm.pipeline.contexts.length; i++)
                 this.add_context(algorithm.pipeline.contexts[i]);
             for(var i = 0; i < algorithm.pipeline.programs.length; i++)
-                this.add_programs(algorithm.pipeline.programs[i]);
+                this.add_program(algorithm.pipeline.programs[i]);
             for(var i = 0; i < algorithm.pipeline.stages.length; i++)
-                this.add_stages(algorithm.pipeline.stages[i]);
+                this.add_stage(algorithm.pipeline.stages[i]);
         }
 
         window.onpopstate = function (event) {
