--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="codemirror/addon/dialog/dialog.css">
     <link rel="stylesheet" href="codemirror/addon/search/matchesonscrollbar.css">
-    <!-- <link rel="stylesheet" href="codemirror/theme/the-matrix.css"> -->
+    <link rel="stylesheet" href="codemirror/theme/the-matrix.css">
 
     <script type="text/javascript" src="codemirror/lib/codemirror.js"></script>
     <script type="text/javascript" src="codemirror/mode/javascript/javascript.js"></script>
@@ -2405,7 +2405,7 @@
                 width_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_width_exact_js'), {
                     mode: "xml",
                     lineNumbers: false,
-                    // theme: "the-matrix",
+                    theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true
                 });
@@ -2416,7 +2416,7 @@
                 height_editor = CodeMirror.fromTextArea(document.getElementById(context_identifier + '_height_exact_js'), {
                     mode: "javascript",
                     lineNumbers: false,
-                    // theme: "the-matrix",
+                    theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true
                 });
@@ -2927,7 +2927,7 @@
 
                 frag_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_frag_code'), {
                     lineNumbers: false,
-                    // theme: "the-matrix",
+                    theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true
                 });
@@ -2937,7 +2937,7 @@
 
                 vert_editor = CodeMirror.fromTextArea(document.getElementById(program_identifier + '_vert_code'), {
                     lineNumbers: false,
-                    // theme: "the-matrix",
+                    theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true
                 });
@@ -3005,7 +3005,7 @@
                     uniform_js_editor = CodeMirror.fromTextArea(document.getElementById(uniform_identifier + '_js_code'), {
                         mode: "javascript",
                         lineNumbers: false,
-                        // theme: "the-matrix",
+                        theme: "the-matrix",
                         autoRefresh: true,
                         lineWrapping: true
                     });
@@ -3517,7 +3517,7 @@
                 indices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_indices_code'), {
                     mode: "xml",
                     lineNumbers: false,
-                    // theme: "the-matrix",
+                    theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true
                 });
@@ -3528,7 +3528,7 @@
                 vertices_editor = CodeMirror.fromTextArea(document.getElementById(stage_identifier + '_vertices_code'), {
                     mode: "xml",
                     lineNumbers: false,
-                    // theme: "the-matrix",
+                    theme: "the-matrix",
                     autoRefresh: true,
                     lineWrapping: true
                 });
@@ -3642,7 +3642,7 @@
             window.html_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_html_textarea"), {
                 mode: "xml",
                 lineNumbers: false,
-                // theme: "the-matrix",
+                theme: "the-matrix",
                 autoRefresh: true,
                 lineWrapping: true
             });
@@ -3650,7 +3650,7 @@
             window.javascript_editor = CodeMirror.fromTextArea(document.getElementById("algorithm_javascript_textarea"), {
                 mode: "javascript",
                 lineNumbers: false,
-                // theme: "the-matrix",
+                theme: "the-matrix",
                 autoRefresh: true,
                 lineWrapping: true
             });
