--- a/www/index.html
+++ b/www/index.html
@@ -3289,7 +3289,7 @@
                     '        </div>\n' +
                     '        <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
                     '            <input id="' + stage_identifier + '_name" style="text-align:center; color:#fff;" placeholder="Program name..."\n' +
-                    '                value=""></input>\n' +
+                    '                value="'+stage.name+'""></input>\n' +
                     '            <br>\n' +
                     '            <br>\n' +
                     '\n' +
@@ -3304,7 +3304,7 @@
                     '        </div>\n' +
                     '        <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
                     '            <input style="text-align:center; color:#fff;" placeholder="Context name..."\n' +
-                    '                id="' + stage_identifier + '_context_name" value=""></input>\n' +
+                    '                id="' + stage_identifier + '_context_name" value="'+stage.context_name+'"></input>\n' +
                     '            <br>\n' +
                     '            <br>\n' +
                     '\n' +
@@ -3319,7 +3319,7 @@
                     '        </div>\n' +
                     '        <div class="col-12 col-sm-12 col-md-6 col-lg-6">\n' +
                     '            <input style="text-align:center; color:#fff;" placeholder="Program name..."\n' +
-                    '                id="' + stage_identifier + '_program_name" value=""></input>\n' +
+                    '                id="' + stage_identifier + '_program_name" value="'+stage.program_name+'"></input>\n' +
                     '            <br>\n' +
                     '            <br>\n' +
                     '\n' +
