--- a/www/index.html
+++ b/www/index.html
@@ -1283,6 +1283,7 @@
                 }
 
                 default_create_algorithm = {
+                    name: "Default Algorithm",
                     type: Message.Type.ALGORITHM,
                     state: {
                         has_html: false,
