--- a/www/index.html
+++ b/www/index.html
@@ -1389,7 +1389,7 @@
                         stages: [
                             {
                                 type: OpenGLStage.Type.SHADER,
-                                name: 'main-stage'
+                                name: 'main-stage',
                                 context_name: 'image-context',
                                 program_name: 'output-program',
                                 mesh_vertices_eval: null,
