--- a/www/index.html
+++ b/www/index.html
@@ -480,14 +480,18 @@
                 <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
                     style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
-                        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a style="color:#FFF!important; ">Preview Image:</a>&nbsp;
                         </div>
-                        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                            <p id="algorithm_thumbnail">
-                                <img src="{{((algorithm.thumbnail && algorithm.thumbnail.url) ? algorithm.thumbnail.url : defaultImage)}}"
-                                    style="height:100% !important; max-height:128px !important; border: 2px solid #fff !important;" />
-                            </p>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
+                            
+    <div fixed id="iframeDiv"
+    style="position: relative; height: auto; width: 100%; border: 1px solid #fff !important;">
+    <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;" src="canvas.html"
+        id="preview"></iframe>
                         </div>
                     </div>
                     <br>
@@ -1019,10 +1023,10 @@
         </div>
     </div>
 
-    <div fixed id="iframeDiv"
+    <!-- <div fixed id="iframeDiv"
         style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; height: 100%; width: 100%; z-index: -1;">
         <iframe sandbox="allow-scripts" allow="microphone" style="border: 0; margin: 0px !important;" src="canvas.html"
-            id="mainIframe" class="webGLDiv"></iframe>
+            id="mainIframe" class="webGLDiv"></iframe> -->
     </div>
 
     <script>
@@ -1033,7 +1037,7 @@
         }
 
         function load_tree(onload_callback) {
-            iframe = document.getElementById("mainIframe");
+            iframe = document.getElementById("preview");
             iframe.onload = on_resources_loaded;
             iframe.sandbox = "allow-scripts";
             iframe.style.border = "0px";
