--- a/www/index.html
+++ b/www/index.html
@@ -486,7 +486,7 @@
                     </div>
                     <br>
                     <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="border: 1px solid #fff !important;">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="height:512px; border: 1px solid #fff !important;">
 
                             <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
                                 src="canvas.html" id="preview"></iframe>
