--- a/www/index.html
+++ b/www/index.html
@@ -469,9 +469,23 @@
 
         <div class="row connected_content" id="edit"
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
-            <div class="col-0 col-sm-0 col-md-1 col-lg-2">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+                <h1 class="read_only"
+                    style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    <div class="row">
+                        <a style="color:#FFF!important; ">Algorithm Preview:</a>
+                        <br>  
+                        <div class="row" style="height:512px;">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="height:512px; border: 1px solid #fff !important;">
+
+                                <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
+                                    src="canvas.html" id="preview"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-10 col-lg-8" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="text-align: center;">
 
                 <h1 class="read_only"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -479,20 +493,6 @@
                 </h1>
                 <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
                     style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    <div class="row">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <a style="color:#FFF!important; ">Preview Image:</a>&nbsp;
-                        </div>
-                    </div>
-                    <br>
-                    <div class="row" style="height:512px;">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="height:512px; border: 1px solid #fff !important;">
-
-                            <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
-                                src="canvas.html" id="preview"></iframe>
-                        </div>
-                    </div>
-                    <br>
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                             <a style="color:#FFF!important; ">Title:</a>&nbsp;
@@ -754,8 +754,6 @@
                 </div>
                 <br>
                 <br>
-            </div>
-            <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
         </div>
 
