--- a/www/index.html
+++ b/www/index.html
@@ -478,7 +478,7 @@
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="height:512px; border: 1px solid #fff !important;">
 
                                 <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
-                                    src="canvas.html" id="preview"></iframe>
+                                    src="canvas.html" id="preview_iframe"></iframe>
                             </div>
                         </div>
                 </h1>
@@ -631,7 +631,7 @@
                     <br>
                     <div id="algorithm_html" class="row" style="display:none;">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <textarea id="algorithm_html_textarea" rows="8"
+                            <textar ea id="algorithm_html_textarea" rows="8"
                                 style="text-align:left; border: 1px solid #FFF;" placeholder="Enter html here..."
                                 value=""></textarea>
                             <br>
@@ -1030,8 +1030,8 @@
             return Math.round(num * multiplier) / multiplier;
         }
 
-        function load_tree(onload_callback) {
-            iframe = document.getElementById("preview");
+        function load_preview_iframe(onload_callback) {
+            iframe = document.getElementById("preview_iframe");
             iframe.onload = on_resources_loaded;
             iframe.sandbox = "allow-scripts";
             iframe.style.border = "1px solid #fff";
@@ -3673,7 +3673,7 @@
             window.javascript_editor.getWrapperElement().id = "algorithm_javascript_codemirror"
             window.html_editor.setValue('<!--Enter HTML here. -->');
             window.javascript_editor.setValue('//Enter JavaScript here.');
-            load_tree()
+            load_preview_iframe()
         }
     </script>
 </body>
