--- a/www/index.html
+++ b/www/index.html
@@ -560,7 +560,8 @@
                         </div>
                     </div>
                 </h1>
-
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>General Settings</a>
@@ -667,6 +668,8 @@
                     </div>
                 </h1>
 
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>Media Files</a>
@@ -688,6 +691,8 @@
                         </div>
                     </div>
                 </h1>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -705,6 +710,8 @@
                         </div>
                     </div>
                 </h1>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -722,6 +729,8 @@
                         </div>
                     </div>
                 </h1>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
 
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -732,6 +741,8 @@
                         class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add Context</button>
                 </div>
                 <br>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Programs</a>
@@ -741,6 +752,8 @@
                         class="btn btn-outline-success mx-auto" onclick="state.add_program()">Add Program</button>
                 </div>
                 <br>
+            </div>
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Pipeline Stages</a>
