--- a/www/index.html
+++ b/www/index.html
@@ -469,21 +469,22 @@
 
         <div class="row connected_content" id="edit"
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap">
                 <h1 class="read_only"
                     style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                        <a style="color:#FFF!important; ">Algorithm Preview:</a>
-                        <br>  
-                        <div class="row" style="height:512px;">
-                            <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="height:512px; border: 1px solid #fff !important;">
+                    <a style="color:#FFF!important; ">Algorithm Preview:</a>
+                    <br>
+                    <div class="row" style="height:512px;">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-12"
+                            style="height:512px; border: 1px solid #fff !important;">
 
-                                <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
-                                    src="canvas.html" id="preview_iframe"></iframe>
-                            </div>
+                            <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
+                                src="canvas.html" id="preview_iframe"></iframe>
                         </div>
+                    </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
 
                 <h1 class="read_only"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -561,7 +562,7 @@
                     </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>General Settings</a>
@@ -669,7 +670,7 @@
                 </h1>
 
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>Media Files</a>
@@ -692,7 +693,7 @@
                     </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -711,7 +712,7 @@
                     </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -730,7 +731,7 @@
                     </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
 
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -742,7 +743,7 @@
                 </div>
                 <br>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Programs</a>
@@ -753,7 +754,7 @@
                 </div>
                 <br>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Pipeline Stages</a>
@@ -765,7 +766,7 @@
                 </div>
                 <br>
                 <br>
-            </div>
+             </div>
         </div>
 
         <div class="row connected_content" id="delete_account"
