--- a/www/index.html
+++ b/www/index.html
@@ -469,7 +469,7 @@
 
         <div class="row connected_content" id="edit"
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap">
                 <h1 class="read_only"
                     style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a style="color:#FFF!important; ">Algorithm Preview:</a>
@@ -484,7 +484,7 @@
                     </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
 
                 <h1 class="read_only"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -562,7 +562,7 @@
                     </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>General Settings</a>
@@ -670,7 +670,7 @@
                 </h1>
 
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>Media Files</a>
@@ -693,7 +693,7 @@
                     </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -712,7 +712,7 @@
                     </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -731,7 +731,7 @@
                     </div>
                 </h1>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
 
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -743,7 +743,7 @@
                 </div>
                 <br>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Programs</a>
@@ -754,7 +754,7 @@
                 </div>
                 <br>
             </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 flex-wrap" style="text-align: center;">
+            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Pipeline Stages</a>
