--- a/www/index.html
+++ b/www/index.html
@@ -469,26 +469,28 @@
 
         <div class="row connected_content" id="edit"
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap">
+            <div class="col-0 col-sm-0 col-md-1 col-lg-2">
+            </div>
+            <div class="col-12 col-sm-12 col-md-10 col-lg-8">
                 <h1 class="read_only"
                     style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
-                    <a style="color:#FFF!important; ">Algorithm Preview:</a>
-                    <br>
-                    <div class="row" style="height:512px;">
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-12"
-                            style="height:512px; border: 1px solid #fff !important;">
+                        <a style="color:#FFF!important; ">Algorithm Preview:</a>
+                        <br>  
+                        <div class="row" style="height:512px;">
+                            <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="height:512px; border: 1px solid #fff !important;">
 
-                            <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
-                                src="canvas.html" id="preview_iframe"></iframe>
+                                <iframe sandbox="allow-scripts" allow="microphone" style="width: 100%; height: 100%;"
+                                    src="canvas.html" id="preview_iframe"></iframe>
+                            </div>
                         </div>
-                    </div>
                 </h1>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
-
+                <br>
                 <h1 class="read_only"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>Algorithm Information</a>
+                </h1>
+                <h1 onclick="profileClicked(algorithm.owner)" class="read_only"
+                    style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                             <a style="color:#FFF!important; ">Title:</a>&nbsp;
@@ -558,11 +560,14 @@
                         </div>
                     </div>
                 </h1>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
+
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>General Settings</a>
+                </h1>
+                <h1 class="editable"
+                    style=" padding-top: 14px; padding-bottom: 14px; text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6" style="align-self: center;">
                             <a>Algorithm Title:</a>
@@ -662,11 +667,12 @@
                     </div>
                 </h1>
 
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>Media Files</a>
+                </h1>
+                <h1 class="editable"
+                    style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <a>Image Files:</a>
@@ -682,8 +688,6 @@
                         </div>
                     </div>
                 </h1>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -701,8 +705,6 @@
                         </div>
                     </div>
                 </h1>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <h1 class="editable"
                     style="padding-top: 14px; padding-bottom: 14px;text-align:center; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <div class="row">
@@ -720,8 +722,6 @@
                         </div>
                     </div>
                 </h1>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
 
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
@@ -732,8 +732,6 @@
                         class="btn btn-outline-success mx-auto" onclick="state.add_context()">Add Context</button>
                 </div>
                 <br>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Programs</a>
@@ -743,8 +741,6 @@
                         class="btn btn-outline-success mx-auto" onclick="state.add_program()">Add Program</button>
                 </div>
                 <br>
-            </div>
-            <div class="col-12 col-sm-12 col-md-12 col-lg-6 d-flex flex-wrap" style="text-align: center;">
                 <div class="editable"
                     style="padding: 14px; width:100%; text-align:center; color:#fff; font-size: 14px !important; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                     <a>WebGL Pipeline Stages</a>
@@ -756,7 +752,9 @@
                 </div>
                 <br>
                 <br>
-             </div>
+            </div>
+            <div class="col-0 col-sm-0 col-md-1 col-lg-2">
+            </div>
         </div>
 
         <div class="row connected_content" id="delete_account"
