--- a/www/index.html
+++ b/www/index.html
@@ -471,11 +471,14 @@
             style="display: none; position:absolute; left:0px; top:0px; width:100%; height:100%;">
             <div class="col-0 col-sm-0 col-md-1 col-lg-2">
             </div>
-            <div class="col-12 col-sm-12 col-md-10 col-lg-8">
+            <div class="col-12 col-sm-12 col-md-10 col-lg-8" style="text-align: center;">
                 <h1 class="read_only"
                     style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                         <a style="color:#FFF!important; ">Algorithm Preview:</a>
+                </h1>
                         <br>  
+                <h1 class="read_only"
+                    style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                         <div class="row" style="height:512px;">
                             <div class="col-12 col-sm-12 col-md-12 col-lg-12" style="height:512px; border: 1px solid #fff !important;">
 
