--- a/www/index.html
+++ b/www/index.html
@@ -473,7 +473,7 @@
             </div>
             <div class="col-12 col-sm-12 col-md-10 col-lg-8" style="text-align: center;">
                 <h1 class="read_only"
-                    style="text-align:center; padding-top: 14px; padding-bottom: 14px; color:#fff; font-size: 14px !important; width:auto; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
+                    style="padding: 14px; text-align:center; color:#fff; font-size: 14px !important; width:max-content; display: inline-block; background-color: rgba(0,0,0,.75); border-radius: 12px; border: 1px solid #fff !important;">
                         <a style="color:#FFF!important; ">Algorithm Preview:</a>
                 </h1>
                         <br>  
